# tng-rs

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENCE  README.md  build.rs  run_cross.sh  run_hyperfine.sh
.github/workflows/: check.yml  test.yml
benches/: compress.rs
c_test/: bench_compress.c
src/: atom.rs  bench_workload.rs  bond.rs  bwlzh.rs  chain.rs  coder.rs  compress.rs  data.rs  dict.rs  ffi.rs  fix_point.rs  gen_block.rs  huffman.rs  huffmem.rs  lib.rs  lz77.rs  molecule.rs  mtf.rs  particle_mapping.rs  residue.rs  rle.rs  trajectory.rs  trajectory_frame_set.rs  utils.rs  widemuldiv.rs  xtc2.rs  xtc3.rs
src/c_comparison/: c_helpers.rs  mod.rs  prop_bwt.rs  prop_coder.rs  prop_fixpoint.rs  prop_huffman.rs  prop_rle.rs  prop_widemuldiv.rs  test_bwt.rs  test_coder.rs  test_compress.rs  test_fixpoint.rs  test_huffman.rs  test_mtf.rs  test_rle.rs  test_testsuite.rs  test_vals16.rs  test_widemuldiv.rs  testsuite_data.rs
tests/: test_regression_gtest.rs
