[package]
name = "tng-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_approx_eq = "1.1.0"
flate2 = "1.1.9"
log = "0.4.29"
thiserror = "2.0.18"
rand = "0.10.0"

[build-dependencies]
cc = "1.2.57"

[dev-dependencies]
env_logger = "0.11.9"
libc = "0.2.183"
proptest = "1.10.0"

[lints.clippy]
assigning_clones = "warn"
single_match_else = "warn"
