[package]
name = "tng-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_approx_eq = "1.1.0"
flate2 = "1.1.9"
log = "0.4.29"
thiserror = "2.0.18"
rand = "0.10.0"
md-5 = "0.11.0"
zerocopy = { version = "0.8.48", features = ["derive"] }

[build-dependencies]
cc = "1.2.58"

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11.10"
libc = "0.2.184"
proptest = "1.11.0"

[[bench]]
name = "compress"
harness = false

[lints.clippy]
assigning_clones = "warn"
single_match_else = "warn"
